# my-config

./: .gitattributes  .gitignore  .gitmodules  README.md
1.my-config/1-WINDOWS/2.windows-11-generate-file-iso/: GENERATE-ISO.cmd
1.my-config/2-LINUX/1.grub/1.themes/: install.sh
1.my-config/2-LINUX/2.services/1.headeset-service/: 99-set-headset-max-volume.rules  flag-headset-plugged.sh  set-headset-max-volume.desktop  set-headset-max-volume.service  set-headset-max-volume.sh  setup.sh
1.my-config/2-LINUX/2.services/2.kitty/: kitty.conf  kitty.conf.bak
1.my-config/2-LINUX/2.services/3.neofetch-themes/: config.conf
1.my-config/2-LINUX/2.services/4.asdf/: asdf.sh  asdf.txt
1.my-config/2-LINUX/2.services/5.fish/: config.fish
1.my-config/2-LINUX/2.services/6.davinci-resolve-converter/: caminho.txt  convert-to-resolve.sh
1.my-config/2-LINUX/2.services/7.fastfetch-theme/: config.jsonc
1.my-config/3-CONTAINER/1.portainer/: portainer-docker-compose.yml
1.my-config/3-CONTAINER/2.dns/1.pi-hole/: dns-docker-compose.yml
1.my-config/3-CONTAINER/3.midia/1.transmission-utorrent/: transmission-docker-compose.yml
1.my-config/3-CONTAINER/3.midia/3.kaizoku-manga-reader/: kaizoku-docker-compose.yml
1.my-config/3-CONTAINER/3.midia/3.mangas-reader/: manga-dlp-docker-compose.yml
configuration/linux/.dotfiles/: .bashrc  mimeapps.list  screenshot-dp2.sh
configuration/linux/.dotfiles-old/swaync/: style.css
configuration/linux/.dotfiles/autostart/: set-headset-max-volume.desktop
configuration/linux/.dotfiles/caelestia/: shell.json
configuration/linux/.dotfiles/davinci-resolve-converter/: convert-to-resolve.sh
configuration/linux/.dotfiles/fastfetch/: config.jsonc
configuration/linux/.dotfiles/fish/: config.fish  fish_variables
configuration/linux/.dotfiles/gtk-3.0/: bookmarks  settings.ini
configuration/linux/.dotfiles/gtk-4.0/: settings.ini
configuration/linux/.dotfiles/hypr/: enviroment.conf  hyprland.conf  hyprlock.conf  pyprland.toml
configuration/linux/.dotfiles/kitty/: current-theme.conf
configuration/linux/.dotfiles/quickshell/: .gitignore  CMakeLists.txt  makefile  shell.qml
configuration/linux/.dotfiles/quickshell/colors/: ColorLoader.qml
configuration/linux/.dotfiles/quickshell/modules/: CommandModule.qml  DateModule.qml  NotificationContainer.qml  NotificationItem.qml  NotificationListener.qml  WorkspaceModule.qml
configuration/linux/.dotfiles/quickshell/native/: CppBackend.cpp  CppBackend.hpp  NotificationListener.cpp  NotificationListener.hpp  NotificationListenerAdaptor.cpp  NotificationListenerAdaptor.hpp
configuration/linux/.dotfiles/quickshell/themes/: FontFamily.qml  WalManager.qml
configuration/linux/.dotfiles/quickshell/widgets/: NotificationContainer.qml  NotificationPopup.qml  WaybarLauncher.qml
configuration/linux/debian/: SERVER.md
configuration/linux/fedora/: SERVER.md
configuration/windows/.config/: .wezterm.lua
configuration/windows/scripts-install-apps/: install.winget
(+216 files in other folders)
